--- a/mod_2_test/style.css
+++ b/mod_2_test/style.css
@@ -11,11 +11,76 @@ div{
 	margin:0px;
 	padding: 0px;
 }
-@media (min-width:992px ){	
 .menu1{
 	border: 1px solid black;
 	background-color: #4DF0A1;
-	font-size: 115%;
+	font-size: 1em;
+	margin-bottom: 15px;
+	width: 98%;
+	padding: 10px ;
+	position: relative;
+	padding-top: 20px;
+
+}
+.menu2{
+	border: 1px solid black;
+	background-color: #4DF0A1;
+	font-size: 1em;
+	width: 98%;
+	padding: 10px ;
+	position: relative;
+	padding-top: 20px;
+	margin-bottom: 15px;
+}
+.menu3{
+	border: 1px solid black;
+	background-color: #4DF0A1;
+	font-size: 1em;
+	width: 98%;
+	padding: 10px ;
+	position: relative;
+	padding-top: 20px;
+}
+#h1{
+	background-color: red;
+	font-weight: bold;
+	position: absolute;
+	top:0px;
+	right: 0px;
+	border: 1px solid black;
+	padding: 5px;
+}
+#h2{
+	background-color: pink;
+	font-weight: bold;
+	position: absolute;
+	top:0px;
+	right: 0px;
+	border: 1px solid black;
+	padding: 5px;
+
+}
+#h3{
+	background-color: yellow;
+	font-weight: bold;
+	position: absolute;
+	top:0px;
+	right: 0px;
+	border: 1px solid black;
+	padding: 5px;
+
+}
+
+@media (min-width:992px ){	
+	div{
+	float: left;
+	margin:0px;
+	padding: 0px;
+}
+.menu1{
+	border: 1px solid black;
+	background-color: #4DF0A1;
+	font-size: 1em;
 	margin-bottom: 15px;
 	width: 31.33%;
 	margin-left: 20px;
@@ -27,7 +92,7 @@ div{
 .menu2{
 	border: 1px solid black;
 	background-color: #4DF0A1;
-	font-size: 115%;
+	font-size: 1em;
 	margin-bottom: 15px;
 	width: 31.33%;
 	padding: 10px ;
@@ -38,7 +103,7 @@ div{
 .menu3{
 	border: 1px solid black;
 	background-color: #4DF0A1;
-	font-size: 115%;
+	font-size: 1em;
 	margin-bottom: 15px;
 	width: 31.33%;
 	margin-left:15px;
@@ -76,3 +141,145 @@ div{
 
 }
 }
+
+
+/***********************tablet************************/
+
+
+@media (max-width: 991px) and (min-width: 768px) {
+	div{
+	float: left;
+	margin:0px;
+	padding: 0px;
+}
+	.menu1{
+	border: 1px solid black;
+	background-color: #4DF0A1;
+	font-size: 1em;
+	margin-bottom: 15px;
+	width: 48%;
+	padding: 10px ;
+	position: relative;
+	padding-top: 20px;
+
+}
+.menu2{
+	border: 1px solid black;
+	background-color: #4DF0A1;
+	font-size: 1em;
+	margin-bottom: 15px;
+	width: 48%;
+	padding: 10px ;
+	position: relative;
+	padding-top: 20px;
+	margin-left: 15px;
+}
+.menu3{
+	border: 1px solid black;
+	background-color: #4DF0A1;
+	font-size: 1em;
+	margin-bottom: 15px;
+	width: 98%;
+	padding: 10px ;
+	position: relative;
+	padding-top: 20px;
+}
+#h1{
+	background-color: red;
+	font-weight: bold;
+	position: absolute;
+	top:0px;
+	right: 0px;
+	border: 1px solid black;
+	padding: 5px;
+}
+#h2{
+	background-color: pink;
+	font-weight: bold;
+	position: absolute;
+	top:0px;
+	right: 0px;
+	border: 1px solid black;
+	padding: 5px;
+
+}
+#h3{
+	background-color: yellow;
+	font-weight: bold;
+	position: absolute;
+	top:0px;
+	right: 0px;
+	border: 1px solid black;
+	padding: 5px;
+
+}
+
+
+/******************************mobile*********************************/
+
+
+/*@media (max-width: 767px) {
+	div{
+	float: left;
+	margin:0px;
+	padding: 0px;
+}
+	.menu1{
+	border: 1px solid black;
+	background-color: #4DF0A1;
+	font-size: 1em;
+	margin-bottom: 15px;
+	width: 98%;
+	padding: 10px ;
+	position: relative;
+	padding-top: 20px;
+
+}
+.menu2{
+	border: 1px solid black;
+	background-color: #4DF0A1;
+	font-size: 1em;
+	width: 98%;
+	padding: 10px ;
+	position: relative;
+	padding-top: 20px;
+}
+.menu3{
+	border: 1px solid black;
+	background-color: #4DF0A1;
+	font-size: 1em;
+	width: 98%;
+	padding: 10px ;
+	position: relative;
+	padding-top: 20px;
+}
+#h1{
+	background-color: red;
+	font-weight: bold;
+	position: absolute;
+	top:0px;
+	right: 0px;
+	border: 1px solid black;
+	padding: 5px;
+}
+#h2{
+	background-color: pink;
+	font-weight: bold;
+	position: absolute;
+	top:0px;
+	right: 0px;
+	border: 1px solid black;
+	padding: 5px;
+
+}
+#h3{
+	background-color: yellow;
+	font-weight: bold;
+	position: absolute;
+	top:0px;
+	right: 0px;
+	border: 1px solid black;
+	padding: 5px;
+
+}
+}	
